public/css/main.css
* {
  padding: 0;
  margin: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  background-color: #eff3ff;
}

.cards__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.card__container {
  width: 350px;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
}

.card__content {
  position: relative;
  background: radial-gradient(circle at 50% 0%, green 36%, #ffffff 36%);
  width: 100%;
  padding: 30px 20px;
  -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.15);
          box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.15);
  border-radius: 10px;
}

.card__content__hp {
  width: 80px;
  background-color: #ffffff;
  text-align: center;
  padding: 8px 0;
  border-radius: 30px;
  margin-left: auto;
  font-weight: 400;
}
/*# sourceMappingURL=main.css.map */

